--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,1 +1,23 @@
-FROM jenkins/jenkins:lts
+FROM jenkins/jenkins:latest
+
+# install plugins
+COPY ./jenkins-plugins /usr/share/jenkins/plugins
+RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/plugins
+
+# skip setup wizard
+ENV JAVA_OPTS "-Djenkins.install.runSetupWizard=false"
+
+# defines users
+ENV JENKINS_ADMIN admin
+ENV JENKINS_ADMIN_PASS TEST
+ENV JENKINS_USER user
+ENV JENKINS_USER_PASS TEST
+
+# creating default users
+COPY create_user.groovy /usr/share/jenkins/ref/init.groovy.d/
+COPY create_pipeline_seeder.groovy /usr/share/jenkins/ref/init.groovy.d/
+COPY pipeline_seeder.pipeline /usr/share/jenkins/ref/init.groovy.d/
+COPY build_push_deploy_api.pipeline /usr/share/jenkins/ref/init.groovy.d/
+
+# Jenkins settings
+VOLUME /var/jenkins_home
