feat (jenkins) add Docker client only

--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -4,6 +4,15 @@ FROM jenkins/jenkins:latest
 COPY ./jenkins-plugins /usr/share/jenkins/plugins
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/plugins
 
+USER root
+# install Docker CLI (only)
+ENV DOCKERVERSION=19.03.5
+RUN curl https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz -o docker-${DOCKERVERSION}.tgz \
+  && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker \
+  && rm docker-${DOCKERVERSION}.tgz
+#RUN usermod -a -G root jenkins
+#USER jenkins
+
 # skip setup wizard
 ENV JAVA_OPTS "-Djenkins.install.runSetupWizard=false"
 
