--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -5,11 +5,20 @@ COPY ./jenkins-plugins /usr/share/jenkins/plugins
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/plugins
 
 USER root
-# install Docker CLI (only)
-ENV DOCKERVERSION=19.03.5
-RUN curl https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz -o docker-${DOCKERVERSION}.tgz \
-  && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 -C /usr/local/bin docker/docker \
-  && rm docker-${DOCKERVERSION}.tgz
+# install Docker
+RUN apt-get update && apt-get install -y apt-transport-https ca-certificates curl gnupg2 software-properties-common
+#&& \
+RUN	curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - && \
+	apt-key fingerprint 0EBFCD88
+	#&& \
+RUN add-apt-repository \
+     "deb [arch=amd64] https://download.docker.com/linux/debian \
+     $(lsb_release -cs) \
+     stable"
+     #&& \
+RUN apt-get update && \
+	apt-get install -y docker-ce docker-ce-cli containerd.io
+RUN systemctl enable docker
 #RUN usermod -a -G root jenkins
 #USER jenkins
 
