evol (app) dependencies on a separate docker layer

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,12 @@
 FROM node:12.13.1-alpine3.10
 
-ADD api/ /root/
+# first add package to resolve dependecies on a separate layer
+ADD api/package.json /root/package.json
 WORKDIR /root
 RUN npm install
+
+# then add the whole app
+ADD api/ /root/
 
 EXPOSE 3000
 
