doc (all) polish doc

--- a/ansible/deploy_jenkins.yml
+++ b/ansible/deploy_jenkins.yml
@@ -45,7 +45,7 @@
           - published_port: 8080
             target_port: 8080
         env:
-          JENKINS_ADMIN_PASS: adminp@ass
+          JENKINS_ADMIN_PASS: adminp@ss
           DEPLOY_TARGET: swarm
           APP_SOURCE_REPO: https://github.com/remipichon/cc_RemiPichon_DevOps
           APP_IMAGE_NAME: app
